fix Travis PermGen space error